#576 Adds details about big deal during peace process.